<resources>
    <string name="app_name">AKL Live EV Bus</string>
    <string name="refresh">Refresh</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="development">Function under development.</string>
    <string name="last_updated">Last updated: </string>

    <string name="copy">Copy</string>
    <string name="view_in_full">View full data</string>
    <string name="ev">Electric</string>
    <string name="fcv">Fuel Cell</string>
    <string name="hev">Hybrid</string>

    <string name="settings_key">Ocp-Apim-Subscription-Key</string>
    <string name="settings_primary_key">Primary Key</string>
    <string name="settings_primary_key_helper">Mandatory</string>
    <string name="settings_secondary_key">Secondary Key</string>
    <string name="settings_secondary_key_helper">Optional</string>
    <string name="settings_save">Save</string>
    <string name="settings_where_to_get">Where can I get this?</string>
    <string name="settings_about">About this app</string>
    <string name="settings_view_on_github">View Project on GitHub</string>

    <string name="bus_info_bus_title">The Bus</string>
    <string name="bus_info_model">Make: %1$s\nModel: %2$s\nYear: %3$s</string>
    <string name="bus_info_map_title">Location</string>
    <string name="bus_info_web">Australian Bus Fleet Lists</string>
    <string name="bus_info_json_title">Full JSON</string>

    <string name="map_settings">Map Settings</string>
    <string name="map_auto_refresh">Refresh every 5 minutes</string>
    <string name="map_contribution">© <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors</string>

    <string name="search_hint">Enter keyword</string>
    <string name="search_helper">Enter ID, Fleet, or Rego to search.</string>
    <string name="search_404">No match.</string>
</resources>