<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/search_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/search"
            app:subtitleTextAppearance="@style/TextAppearance.Material3.BodyMedium"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/search_hint"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/search_black_24dp"
            app:helperText="@string/search_helper">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_bar_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_rv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        tools:listitem="@layout/item_main_list_bus"
        tools:itemCount="2"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>