<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/map_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/map"
            app:subtitle="@string/map"
            app:subtitleTextAppearance="@style/TextAppearance.Material3.BodyMedium"/>

    </com.google.android.material.appbar.AppBarLayout>

    <org.osmdroid.views.MapView
        android:id="@+id/map_osm_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>

    <FrameLayout
        android:id="@+id/map_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        style="@style/Widget.Material3.BottomSheet">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.bottomsheet.BottomSheetDragHandleView
                android:id="@+id/map_bottom_sheet_drag_handle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/map_settings"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/map_auto_refresh_5"
                android:enabled="false"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/map_map_tv_contributor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/map_contribution"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.BodySmall"/>

        </LinearLayout>

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>